# semantic-retrieval-engine

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
data/db/: test.db
data/index/: idx.index
data/testdata/: documents.json
data/testdata/test-index/: test1.index
docker/postgres/: init.sql
scripts/: build-test-volume.py  generate-dummies.py
src/: config.py  main.py
src/data/: config.py  files.py
src/infrastructure/: database.py  vectorindex.py
src/infrastrucuture/: database.py  vector_index.py  vectorindex.py
src/pipelines/: ingest_volume.py
src/processing/: embeddings.py
src/retrieval/: config.py  embeddings.py  index.py  main.py  search.py
src/tests/data/idx/: test.idx
tests/: conftest.py  test_database.py  test_embeddings.py  test_files.py  test_index.py  test_ingest_volume.py  test_search.py  test_vectorindex.py
tests/data/db/: test.db
tests/data/docs/: 0.docx  0.md  0.txt  1.docx  1.md  1.txt
tests/data/idx/: test.idx
