[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-retrieval-engine"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

filterwarnings = [
    "ignore:.*SwigPy.*:DeprecationWarning",
    "ignore:.*swig.*:DeprecationWarning"
]
